--- a/.github/workflows/minitorch.yml
+++ b/.github/workflows/minitorch.yml
@@ -33,18 +33,15 @@ jobs:
         pytest tests -x -m task0_2
         pytest tests -x -m task0_3
         pytest tests -x -m task0_4
-    # - name: Test with pytest Module 1
+    - name: Test with pytest Module 1
+      run: |
+        echo "Module 1"
+        pytest tests -x -m task1_1
+        pytest tests -x -m task1_2
+        pytest tests -x -m task1_3
+        pytest tests -x -m task1_4
+    # - name: Test with pytest Module 2
     #   run: |
-    #     echo "Module 0"
-    #     pytest tests -x -m task0_1
-    #     pytest tests -x -m task0_2
-    #     pytest tests -x -m task0_3
-    #     pytest tests -x -m task0_4
-    #     echo "Module 1"
-    #     pytest tests -x -m task1_1
-    #     pytest tests -x -m task1_2
-    #     pytest tests -x -m task1_3
-    #     pytest tests -x -m task1_4
     #     echo "Module 2"
     #     pytest tests -x -m task2_1
     #     pytest tests -x -m task2_2
